; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/spi-nor/extr_nxp-spifi.c_nxp_spifi_erase.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/spi-nor/extr_nxp-spifi.c_nxp_spifi_erase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_nor = type { i32, %struct.nxp_spifi* }
%struct.nxp_spifi = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@SPIFI_ADDR = common dso_local global i64 0, align 8
@SPIFI_CMD_FIELDFORM_ALL_SERIAL = common dso_local global i32 0, align 4
@SPIFI_CMD = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spi_nor*, i32)* @nxp_spifi_erase to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nxp_spifi_erase(%struct.spi_nor* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.spi_nor*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.nxp_spifi*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.spi_nor* %0, %struct.spi_nor** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load %struct.spi_nor*, %struct.spi_nor** %4, align 8
  %10 = getelementptr inbounds %struct.spi_nor, %struct.spi_nor* %9, i32 0, i32 1
  %11 = load %struct.nxp_spifi*, %struct.nxp_spifi** %10, align 8
  store %struct.nxp_spifi* %11, %struct.nxp_spifi** %6, align 8
  %12 = load %struct.nxp_spifi*, %struct.nxp_spifi** %6, align 8
  %13 = call i32 @nxp_spifi_set_memory_mode_off(%struct.nxp_spifi* %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load i32, i32* %8, align 4
  store i32 %17, i32* %3, align 4
  br label %48

18:                                               ; preds = %2
  %19 = load i32, i32* %5, align 4
  %20 = load %struct.nxp_spifi*, %struct.nxp_spifi** %6, align 8
  %21 = getelementptr inbounds %struct.nxp_spifi, %struct.nxp_spifi* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @SPIFI_ADDR, align 8
  %24 = add nsw i64 %22, %23
  %25 = call i32 @writel(i32 %19, i64 %24)
  %26 = load i32, i32* @SPIFI_CMD_FIELDFORM_ALL_SERIAL, align 4
  %27 = load %struct.spi_nor*, %struct.spi_nor** %4, align 8
  %28 = getelementptr inbounds %struct.spi_nor, %struct.spi_nor* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = call i32 @SPIFI_CMD_OPCODE(i32 %29)
  %31 = or i32 %26, %30
  %32 = load %struct.nxp_spifi*, %struct.nxp_spifi** %6, align 8
  %33 = getelementptr inbounds %struct.nxp_spifi, %struct.nxp_spifi* %32, i32 0, i32 1
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = add nsw i64 %35, 1
  %37 = call i32 @SPIFI_CMD_FRAMEFORM(i64 %36)
  %38 = or i32 %31, %37
  store i32 %38, i32* %7, align 4
  %39 = load i32, i32* %7, align 4
  %40 = load %struct.nxp_spifi*, %struct.nxp_spifi** %6, align 8
  %41 = getelementptr inbounds %struct.nxp_spifi, %struct.nxp_spifi* %40, i32 0, i32 0
  %42 = load i64, i64* %41, align 8
  %43 = load i64, i64* @SPIFI_CMD, align 8
  %44 = add nsw i64 %42, %43
  %45 = call i32 @writel(i32 %39, i64 %44)
  %46 = load %struct.nxp_spifi*, %struct.nxp_spifi** %6, align 8
  %47 = call i32 @nxp_spifi_wait_for_cmd(%struct.nxp_spifi* %46)
  store i32 %47, i32* %3, align 4
  br label %48

48:                                               ; preds = %18, %16
  %49 = load i32, i32* %3, align 4
  ret i32 %49
}

declare dso_local i32 @nxp_spifi_set_memory_mode_off(%struct.nxp_spifi*) #1

declare dso_local i32 @writel(i32, i64) #1

declare dso_local i32 @SPIFI_CMD_OPCODE(i32) #1

declare dso_local i32 @SPIFI_CMD_FRAMEFORM(i64) #1

declare dso_local i32 @nxp_spifi_wait_for_cmd(%struct.nxp_spifi*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
